--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "",
+  "name": "opus-frontend",
   "type": "module",
   "version": "0.0.1",
   "scripts": {
@@ -10,8 +10,10 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^4.6.0",
     "@astrojs/check": "^0.5.10",
+    "@nanostores/react": "^0.7.2",
+    "astro": "^4.6.0",
+    "nanostores": "^0.10.3",
     "typescript": "^5.4.5"
   }
 }
