--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
   },
   "dependencies": {
     "@astrojs/check": "^0.5.10",
+    "@astrojs/tailwind": "^5.1.0",
     "@nanostores/react": "^0.7.2",
     "astro": "^4.6.0",
     "nanostores": "^0.10.3",
+    "tailwindcss": "^3.4.3",
     "typescript": "^5.4.5"
   }
 }
