--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@astrojs/check": "^0.5.10",
     "@astrojs/tailwind": "^5.1.0",
     "@nanostores/react": "^0.7.2",
+    "@prisma/client": "^5.12.1",
     "astro": "^4.6.0",
     "nanostores": "^0.10.3",
     "tailwindcss": "^3.4.3",
