--- a/package.json
+++ b/package.json
@@ -11,11 +11,16 @@
   },
   "dependencies": {
     "@astrojs/check": "^0.5.10",
+    "@astrojs/react": "^3.3.0",
     "@astrojs/tailwind": "^5.1.0",
     "@nanostores/react": "^0.7.2",
     "@prisma/client": "^5.12.1",
+    "@types/react": "^18.2.77",
+    "@types/react-dom": "^18.2.25",
     "astro": "^4.6.0",
     "nanostores": "^0.10.3",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "tailwindcss": "^3.4.3",
     "typescript": "^5.4.5"
   }
