--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "extends": "astro/tsconfigs/strict",
   "compilerOptions": {
-    "baseUrl": "C:/Users/rbmk-/OneDrive/Documentos/programacion/Desarrollo web/OpusSN-frontend",
+    "baseUrl": ".",
     "paths": {
       "@/*": [
         "src/*"
