update(package): install libs
Remove prisma client, and add nanostores/persistent

--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
     "@astrojs/react": "^3.3.0",
     "@astrojs/tailwind": "^5.1.0",
     "@fontsource/ubuntu": "^5.0.13",
+    "@nanostores/persistent": "^0.10.1",
     "@nanostores/react": "^0.7.2",
-    "@prisma/client": "^5.12.1",
     "@types/react": "^18.2.77",
     "@types/react-dom": "^18.2.25",
     "astro": "^4.6.0",
