--- a/.github/workflows/Front_Workflow.yml
+++ b/.github/workflows/Front_Workflow.yml
@@ -14,6 +14,11 @@ jobs:
       - name: Clone repo
         uses: actions/checkout@v4
 
+      - name: Create .env file
+        run: |
+          touch .env 
+          echo API_URL=${{secrets.API_URL}}
+
       - name: Install bun
         uses: oven-sh/setup-bun@v1
 
