--- a/package.json
+++ b/package.json
@@ -24,5 +24,8 @@
     "preview": "astro preview",
     "astro": "astro"
   },
-  "type": "module"
+  "type": "module",
+  "devDependencies": {
+    "@types/node": "^20.12.7"
+  }
 }
