--- a/.github/workflows/Front_Workflow.yml
+++ b/.github/workflows/Front_Workflow.yml
@@ -17,7 +17,7 @@ jobs:
       - name: Create .env file
         run: |
           touch .env 
-          echo API_URL=${{secrets.PUBLIC_API_URL}} >> .env
+          echo PUBLIC_API_URL=${{secrets.PUBLIC_API_URL}} >> .env
 
       - name: Install bun
         uses: oven-sh/setup-bun@v1
